--- a/public/about/index.html
+++ b/public/about/index.html
@@ -60,7 +60,9 @@
     
 
     <div class="article-content">
-      <p>This is a &ldquo;hello world&rdquo; example website for the <a href="https://github.com/rstudio/blogdown"><strong>blogdown</strong></a> package. The theme was forked from <a href="https://github.com/jrutheiser/hugo-lithium-theme">@jrutheiser/hugo-lithium-theme</a> and modified by <a href="https://github.com/yihui/hugo-lithium-theme">Yihui Xie</a>.</p>
+      <p>My name is RJ Bos.  I am an life scout.</p>
+
+<p>My email address is rjbos2@gmail.com</p>
 
     </div>
   </article>
